css/style_item.css
.item_flex_container {
    display: grid;
    grid-template-columns: 2fr 5fr;
    width: 1800px;
    margin: auto;
}

.big_image_2 {
    grid-column-start: 1;
    grid-column-end: 1;
    padding-left: 100px;
    padding-top: 80px;
}

.brick_text {
    grid-column-start: 2;
    grid-column-end: 2;
    padding: 80px 100px 0 100px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
}
.brick_text h3 {
    margin: 10px 0;
    font-size: 40px;
    color: #252525;
}
.brick_text p {
    font-size: 20px;
    color: grey;
    margin: 10px 0;
}

.big_image_2 img {
    width: 100%;
    border-style: solid;
    border-color: gray;
    border-width: 2px;
    margin: auto;
}

.brick_text .colours {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: start;
    align-content: center;
    width: 1100px;
}
.single_colour{
    display: flex;
}

.colours .single_colour{
    justify-content: center;
    vertical-align: bottom;
    width: 70px;
    border-style: solid;
    border-color: lightgray;
    border-width: 1px;
    margin: 10px 10px 0 0;
}

.line {
    height: 5px;
    width: 1000px;
    background-color:lightgrey;
    margin: 60px auto 40px;
}

.sets_container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    width: 800px;
    margin: 0 auto 0;
}

.set {
    display: grid;
    grid-template-columns: 1fr 4fr;
    margin-bottom: 60px;
}
.set_image {
    grid-column-start: 1;
    grid-column-end: 1;
    width: 100%;
}
.set_text {
    grid-column-start: 2;
    grid-column-end: 2;
    padding-left: 2vw;
    color: #252525;
}
.set_text h3 {
    font-size: 1.25vw;
}
.set_text p {
    font-size: 1vw;
}

.scroll-button {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    color: #D9D9D9;
}

@media(max-width: 800px) or (orientation: portrait){
    .item_flex_container {
        grid-template-columns: 1fr;
        width: 100vw;
    }
    .big_image_2{
        padding: 5vh 0 0 0;
        margin: auto;
        width: 80vw;
    }
    .brick_text {
        grid-column-start: 1;
        grid-column-end: 1;
        text-align: center;
        padding: 0;
    }
    .brick_text h3 {
        font-size: 6vw;
    }
    .brick_text p {
        font-size: 3vw;
        margin-bottom: 3vw;
        margin: 0 5vw 3vw 5vw;
    }
    .brick_text .colours {
        justify-content: center;
        width: 100vw;
        margin: 0 auto;
    }
    .colours .single_colour {
        max-width: none;
        width: 18vw;
        margin: 1vw
    }
    .line {
        height: 0.25vh;
        width: 80vw;
        margin: 10vw;
    }
    .sets_container {
        width: 80vw;
        margin: 0 10vw; 
        flex-wrap: nowrap;
    }
    .set_image{
        width: 30vw;
    }
    .set_text h3 {
        font-size: 4vw;
    }
    .set_text p {
        font-size: 3vw;
    }
    .set {
        margin-bottom: 4vh;
    }

    .page-nav {
        margin-bottom: 5vh;
    }
    .page-nav a {
        font-size: 6vw;
    }
    .page-nav span {
        font-size: 6vw;
    }
}

